--- a/song-entry.toml
+++ b/song-entry.toml
@@ -19,7 +19,8 @@ url = "Direct URL for the digitized transcription"
   credits = ["Listed as ROLE: NAME AS CREDITED (MORE COMMON NAME)"]
   edition = "If not first edition, provide edition number"
   publisher = "Publication company, imprint name, or institutional publisher"
-  place = "The publisher's city, with state/country in parentheses as needed"
+  place = "City where publisher is located, with state/region as needed"
+  country = "Country where publisher is located"
   year = "Original publication year for edition (ignoring reprints)"
   vol = "Volume number for multi-volume publications"
   issue = "Issue number or other identifier for serial publications"
@@ -30,8 +31,9 @@ url = "Direct URL for the digitized transcription"
 title = "Title of the released track or audio file of a recording"
 artists = "[Solo artist name, group name, or multiple performers/groups]"
 sessionType = "COMMERCIAL|DOCUMENTARY|AMATEUR"
-date = "Date of the recording session as YEAR (MONTH DAY)"
-place = "Place of the recording session as CITY, STATE (COUNTRY)"
+date = "Date when the recording was made as YEAR (MONTH DAY)"
+place = "Place where the recording was made, with state/region as needed"
+country = "Country where the recording was made"
 personnel = ["Listed as ROLE: NAME AS CREDITED (MORE COMMON NAME)"]
 matrixNum = "Matrix number as etched on the A or B side of a single"
 isMaster = "TRUE|FALSE (if one of multiple takes)"
